@@ -1,6 +1,6 @@
 <?php
 /*
-* Copyright 2001, 2011 Thomas Belliard, Laurent Delineau, Edouard Hue, Eric Lebrun
+* Copyright 2001, 2018 Thomas Belliard, Laurent Delineau, Edouard Hue, Eric Lebrun
 *
 * This file is part of GEPI.
 *
@@ -107,6 +107,35 @@ if(($_SESSION['statut']=='administrateur')||($_SESSION['statut']=='scolarite')||
 			$description_exam=$lig_exam->description;
 			$date_exam=$lig_exam->date;
 
+			$signer=isset($_POST['signer']) ? $_POST['signer'] : array();
+			$tab_signature=array();
+			if(count($signer)>0) {
+				$signature_bull=array();
+				if(count($signer)>0) {
+					$tab_signature=get_tab_signature_bull();
+					/*
+					echo "<pre>";
+					print_r($tab_signature);
+					echo "</pre>";
+					*/
+					if((count($tab_signature)>0)&&(isset($tab_signature['classe']))) {
+						for($loop_classe=0;$loop_classe<count($id_classe);$loop_classe++) {
+
+							if(array_key_exists($id_classe[$loop_classe], $tab_signature['classe'])) {
+								if(array_key_exists($tab_signature['classe'][$id_classe[$loop_classe]]['id_fichier'], $tab_signature['fichier'])) {
+									$signature_bull[$id_classe[$loop_classe]]=$tab_signature['fichier'][$tab_signature['classe'][$id_classe[$loop_classe]]['id_fichier']]['chemin'];
+								}
+							}
+
+						}
+					}
+				}
+			}
+			/*
+			echo "<pre>";
+			print_r($signature_bull);
+			echo "</pre>";
+			*/
 			//===========================
 			// Classes 
 			$sql="SELECT c.classe, c.nom_complet, c.suivi_par, ec.id_classe FROM classes c, ex_classes ec WHERE ec.id_exam='$id_exam' AND c.id=ec.id_classe ORDER BY c.classe;";
@@ -1191,14 +1220,46 @@ if(($_SESSION['statut']=='administrateur')||($_SESSION['statut']=='scolarite')||
 	*/
 
 	echo "<form method=\"post\" action=\"".$_SERVER['PHP_SELF']."\" name='form1' target='_blank'>\n";
-	echo "<p class='bold'>Choisissez les classes pour lesquelles vous souhaitez éditer des bulletins&nbsp;:</p>\n";
+	echo "<p class='bold' style='margin-top:1em;'>Choisissez les classes pour lesquelles vous souhaitez éditer des bulletins&nbsp;:</p>\n";
+	echo "<div style='margin-left:3em;'>";
 	for($i=0;$i<$nb_classes;$i++) {
 		echo "<input type='checkbox' name='id_classe[]' id='id_classe_$i' value='$tab_id_classe[$i]' ";
 		echo "onchange=\"checkbox_change($i);\" ";
 		echo "/>\n";
 		echo "<label for='id_classe_$i'> <span id='texte_id_classe_$i'>$tab_classe[$i]</span></label><br />\n";
 	}
+	echo "</div>";
 	echo add_token_field();
+
+	$tab_signature=get_tab_signature_bull();
+	if(count($tab_signature)>0) {
+		echo "<p class='bold' style='margin-top:1em;'>Signature des bulletins&nbsp;: <a href='#'><img src='../images/edit16.png' class='icone16' title=\"Éditer/Modifier les signatures.
+Le dépot de fichiers de signature pour les différents utilisateurs et classes n'est pour le moment possible qu'en tant qu'administrateur dans Gestion des modules/Bulletins\" /></a></p>\n";
+		echo "<div style='margin-left:3em;'>";
+		echo "<table class='boireaus boireaus_alt' summary='Tableau des signatures possibles'>\n";
+		echo "<tr><th>Classe</th><th>Signer</th></tr>\n";
+		for($i=0;$i<count($tab_id_classe);$i++) {
+			echo "<tr><td>".$tab_classe[$i]."</td><td>";
+			if((isset($tab_signature['classe']))&&(array_key_exists($tab_id_classe[$i] ,$tab_signature['classe']))) {
+				if((isset($tab_signature['fichier']))&&(array_key_exists($tab_signature['classe'][$tab_id_classe[$i]]['id_fichier'] ,$tab_signature['fichier']))) {
+					echo "<input type='checkbox' name='signer[]' id='signer_".$tab_id_classe[$i]."' value= '".$tab_id_classe[$i]."' onchange=\"checkbox_change(this.id)\" /><label for='signer_".$tab_id_classe[$i]."' id='texte_signer_".$tab_id_classe[$i]."'> Signer avec l'image ci-contre ";
+					echo "<img src='".$tab_signature['fichier'][$tab_signature['classe'][$tab_id_classe[$i]]['id_fichier']]['chemin']."' width='100' style='vertical-align:middle;' />";
+					echo "</label>";
+				}
+				else {
+					echo "Le droit de signer est présent,<br />mais aucun fichier de signature n'est associé à la classe.";
+				}
+			}
+			else {
+				echo "<img src='../images/disabled.png' class='icone20' title=\"Vous n'avez pas le droit de signer d'un fichier les bulletins de cette classe.\" />";
+			}
+			echo "</td></tr>\n";
+			//$sql="SELECT ";
+		}
+		echo "</table>\n";
+		echo "</div>";
+	}
+
 	echo "<input type='submit' name='Imprimer' value='Imprimer' />\n";
 	echo "<input type='hidden' name='id_exam' value='$id_exam' />\n";
 	echo "<input type='hidden' name='mode' value='imprimer' />\n";
@@ -1230,7 +1291,7 @@ function ModifCase(mode) {
 </script>\n";
 
 	//echo "<p style='color:red;'><b>A FAIRE&nbsp;:</b> Calculer les moyennes par matières,...</p>\n";
-	echo "<p style='color:red;'><i>NOTES&nbsp;:</i> Les moyennes supposent actuellement que le référentiel des devoirs est 20.<br />Il faudra modifier pour prendre en compte des notes sur autre chose que 20.<br />Les 'bonus' consistent à ne compter que les points supérieurs à 10.<br />Ex.: Pour 12 (coef 3), 14 (coef 1) et 13 (coef 2 et bonus), le calcul est (12*3+14*1+(13-10)*2)/(3+1)</p>\n";
+	echo "<p style='color:red; margin-top:1em;'><i>NOTES&nbsp;:</i> Les moyennes supposent actuellement que le référentiel des devoirs est 20.<br />Il faudra modifier pour prendre en compte des notes sur autre chose que 20.<br />Les 'bonus' consistent à ne compter que les points supérieurs à 10.<br />Ex.: Pour 12 (coef 3), 14 (coef 1) et 13 (coef 2 et bonus), le calcul est (12*3+14*1+(13-10)*2)/(3+1)</p>\n";
 
 	//echo "<p><br /></p>\n";
 	//echo "<p style='color:red;'><i>PROBLEME&nbsp;:</i> 3B1 moyenne min  '-' alors que cela devrait être '0' ???</p>\n";
